add hero section, add responsive styles for smaller screens

--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
             </nav>       
 
         </header>
+
+        <main class="d-flex flex-column align-items-center">
+            <section class="hero text-center py-3 container d-flex align-items-center">
+                <div class="row flex-fill">
+                    <div class="col">
+                        <h1 class="hero-header my-3">eyd</h1>
+                        <p class="hero-description">Software Developer, Deep Learning</p>
+                        <a href="#projects" class="btn btn-outline-dark mx-1">Projects</a>
+                        <a href="#about" class="btn btn-outline-dark mx-1">About Me</a>
+                    </div>  
+                </div>
+            </section>
+        </main>
         
     </body>
 </html>
