add detail page

--- a/index.html
+++ b/index.html
@@ -50,6 +50,42 @@
                     </div>  
                 </div>
             </section>
+
+            <section id="about" class=" about container m-1 py-3 my-2">
+                <div class=" row">
+                    <div class="col col-md-4 col-12 align-items-center justify-content-center d-flex">
+                        <!-- TODO: Hide when screen is small -->
+                        <img src="/static/images/prof_pic2.JPG" alt="" class="me-img">
+                    </div>
+                    <div class=" col col-md-8 col-12 p-4 d-flex flex-column">
+                        <h1 class="about-header mb-4">About Me</h1>
+                        <!-- TODO: Add icons -->
+                        <p class="fw-lighter m-0 mt-4">Adrian Christopher Tubio</p>
+                        <p class="fw-lighter m-0 mb-4">acgtubio@gmail.com</p>
+                        <p class="about-details my-4 me-4">Greetings! I am Adrian, a passionate software developer with a diverse skill set in full-stack software development and a knack for crafting intelligent AI models. Over the years, I have immersed myself in the dynamic world of technology, pushing boundaries and creating solutions that leave a lasting impact.</p>
+                    </div>
+                </div>
+                <div class=" row mt-4">
+                    <div class="col d-flex justify-content-center pt-5">
+                        <h1 class="stack-header">My Stack</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- TODO: Add Icons -->
+                    <div class="col d-flex d-flex flex-column p-5 front-end">
+                        <p class="stack-item">Front-end</p>
+                        <p class="stack-details">Experienced in vanilla HTML, JavaScript, and CSS, while also equally experienced in front-end frameworks such as React.js and Next.js</p>
+                    </div>
+                    <div class="col d-flex p-5 d-flex flex-column back-end">
+                        <p class="stack-item">Back-end</p>
+                        <p class="stack-details">Developed software using Java, Python, JavaScript and TypeScript with a good understanding of Object-oriented Programming. </p>
+                    </div>
+                    <div class="col d-flex p-5 d-flex flex-column deep-learning">
+                        <p class="stack-item">Deep Learning</p>
+                        <p class="stack-details">Using TensorFlow Keras in Python along with Pandas, you can ensure that the models deployed can be used to accurately predict data. </p>
+                    </div>
+                </div>
+            </section>
         </main>
         
     </body>
