--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <h1 class="stack-header">My Stack</h1>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row stack-body">
                     <!-- TODO: Add Icons -->
                     <div class="col d-flex d-flex flex-column p-5 front-end">
                         <p class="stack-item">Front-end</p>
@@ -156,7 +156,7 @@
                 </div>
             </section>
         </main>
-        
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
 </html>
